@startuml
'https://plantuml.com/class-diagram

Directorios <|---- Archivos
Directorios <|---- Links


class Archivos{

-String nombre
-double tamaño
----
setters y getters

}

class Directorios{
-String nombre
-double tamaño
-ArrayList<Archivos>:NewArrayList
----
setters y getters
}


class Links{

-String nombre
-double tamaño
-boolean conectado
----
setters y getters

}

@enduml